--- a/css/app.css
+++ b/css/app.css
@@ -414,8 +414,8 @@ footer .acc{
 	text-align:center;
 }
 .about-navigation{
-	position:absolute;
-	bottom:20px;
+	/*position:absolute;
+	bottom:20px;*/
 	width:100%;
 	text-align:center;
 	color:#eaeaea;
@@ -423,6 +423,7 @@ footer .acc{
 }
 .about-navigation span{
 	padding:10px;
+	color:#fff;
 }
 .about-navigation img{
 	cursor:pointer;
@@ -485,11 +486,6 @@ footer .acc{
 	width:75%;
 	height:auto;
 	margin:0 auto;
-	-webkit-transition: transform 0.5s ease;
-  	-moz-transition: transform 0.5s ease;
-  	-o-transition: transform 0.5s ease;
-  	-ms-transition: transform 0.5s ease;
-  	transition: transform 0.5s ease;
   	cursor:pointer;
   	display:block;
 }
@@ -511,11 +507,11 @@ footer .acc{
 	border-top:1px solid #666;
 	border-bottom:1px solid #666;
 	cursor:pointer;
-	-webkit-transform:scale(1.1);
+	/*-webkit-transform:scale(1.1);
     -moz-transform:scale(1.1);
     -ms-transform:scale(1.1);
     -o-transform:scale(1.1);
-     transform:scale(1.1);
+     transform:scale(1.1);*/
 }
 .hover-title small{
 	display:block;
@@ -813,8 +809,8 @@ header{
 }
 .detail h2{
 	border-bottom:1px solid #00aeef;
-	padding-bottom:3%;
-	margin-bottom:3%;
+	padding-bottom:5px;
+	margin-bottom:15px;
 }
 .detail-image{
 	overflow:hidden;
@@ -823,8 +819,20 @@ header{
 .detail-image-horizontal img{
 	height:auto;
 	width:100%;
-	margin-top:45%;
 	max-height:100%;
+}
+.detail-image-horizontal .detail-image,
+.detail-image-horizontal .detail-text{
+	width:100%;
+	height:50%;
+}
+.detail-image-horizontal .detail-text-main{
+		-webkit-column-count: 2; /* Chrome, Safari, Opera */
+    -moz-column-count: 2; /* Firefox */
+    column-count: 2;
+}
+.detail-image-horizontal td{
+	vertical-align: top;
 }
 .detail-image-vertical img{
 	height:100%;
