--- a/css/app.css
+++ b/css/app.css
@@ -816,7 +816,7 @@ header{
 	overflow:hidden;
 	height:100%;
 }
-.detail-image-horizontal img{
+.detail-image-horizontal .detail-image img{
 	height:auto;
 	width:100%;
 	max-height:100%;
@@ -824,17 +824,19 @@ header{
 .detail-image-horizontal .detail-image,
 .detail-image-horizontal .detail-text{
 	width:100%;
+}
+.detail-image-horizontal .detail-image{
 	height:50%;
 }
 .detail-image-horizontal .detail-text-main{
-		-webkit-column-count: 2; /* Chrome, Safari, Opera */
+	-webkit-column-count: 2; /* Chrome, Safari, Opera */
     -moz-column-count: 2; /* Firefox */
     column-count: 2;
 }
 .detail-image-horizontal td{
 	vertical-align: top;
 }
-.detail-image-vertical img{
+.detail-image-vertical .detail-image img{
 	height:100%;
 	width:auto;
 	max-width:100%;
@@ -864,6 +866,13 @@ header{
 }
 .detail-image-vertical{
 	background-size: 100% auto;
+}
+.detail-social{
+	padding:10px;
+}
+.detail-social img{
+	padding:0 10px;
+	cursor:pointer;
 }
 
 /* BROWSER SPECIFIC */
