positions/chapter updates

--- a/css/mq.css
+++ b/css/mq.css
@@ -16,6 +16,10 @@
 	float:right;
 }
 
+#positions.overview > [data-overview-float=none]{
+	float:none!important;
+}
+
 .legal-text,
 .support-text{
 	font-size:20px;
