--- a/css/mq.css
+++ b/css/mq.css
@@ -183,6 +183,9 @@
 		padding-top:20px;
 		padding-bottom:40px;
 	}
+	section#about{
+		padding-top:0;
+	}
 	section#positions-container,
 	section#support{
 		width:90%;
